using percentages to set products styles - fixes desktop layout bug

--- a/app/assets/stylesheets/_mobile.css.scss
+++ b/app/assets/stylesheets/_mobile.css.scss
@@ -19,7 +19,6 @@ body {
     background-color: $blue;
     color: $white;
     left: 0;
-    max-height: 45px;
     padding: 4% 0;
     position: fixed;
     top: 0;
@@ -144,7 +143,7 @@ body {
     }
 
     &.products {
-        padding-top: 44px;
+        padding-top: 14%;
     }
 
     .product {
@@ -179,7 +178,7 @@ body {
                     height: 35px;
                     position: absolute;
                     right: 4%;
-                    top: 38px;
+                    top: 28%;
                     width: 35px;
                 }
             }
